Fiz duas seções do curriculo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<title>Currículo de Tiago Lopes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -21,25 +21,27 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Tiago Lopes</h1>
+							<p>Analista e desenvolvedor de sistemas. <br>
+								<a> FRONT-END || BACK-END</a> <br>
+								<a href="https://www.instagram.com/tiago_lopes.exe/">@tiago_lope.exe</a> / <a href="https://github.com/TiagoUniverse">GitHub</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/pic01.jpeg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>Busco resolver desafios e entregar projetos</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p><strong>Como analista e desenvolvedor de sistemas</strong> eu busco aprender com as situações e procurar as soluções para o nosso projeto tecnológico. Sou bastante fléxivel, adaptável, tranquilo de se trabalhar e aprendo rápido; e assim posso trazer grande valor à sua empresa. No desenvolvimento tecnológico eu destaco minhas principais linguagens: para o BACK-END eu uso PHP, que me auxilia no desenvolvimento Web e para o FRONT-END, utilizo HTML e CSS.</p>
+							<span class="image main"><img src="images/pic02.png" style="  border: 8px solid rgb(187, 152, 152);" alt="" /></span>
 						</div>
 					</section>
 
