--- a/index.html
+++ b/index.html
@@ -24,26 +24,38 @@
 							<h1>Tiago Lopes</h1>
 							<p>Analista e desenvolvedor de sistemas. <br>
 								<a> FRONT-END || BACK-END</a> <br>
-								<a href="https://www.instagram.com/tiago_lopes.exe/">@tiago_lope.exe</a> / <a href="https://github.com/TiagoUniverse">GitHub</a></p>
+								<a href="https://www.instagram.com/tiago_lopes.exe/" target="_blank">@tiago_lope.exe </a> / <a href="https://github.com/TiagoUniverse" target="_blank">GitHub</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpeg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="assets/images/pic01.jpeg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Busco resolver desafios e entregar projetos</h2>
+							<h2>Perfil</h2>
 						</header>
 						<div class="content">
-							<p><strong>Como analista e desenvolvedor de sistemas</strong> eu busco aprender com as situações e procurar as soluções para o nosso projeto tecnológico. Sou bastante fléxivel, adaptável, tranquilo de se trabalhar e aprendo rápido; e assim posso trazer grande valor à sua empresa. No desenvolvimento tecnológico eu destaco minhas principais linguagens: para o BACK-END eu uso PHP, que me auxilia no desenvolvimento Web e para o FRONT-END, utilizo HTML e CSS.</p>
-							<span class="image main"><img src="images/pic02.png" style="  border: 8px solid rgb(187, 152, 152);" alt="" /></span>
+							<p> Saudações. Eu sou <b>Tiago César</b>! É um prazer poder me apresentar para você. <br> Eu sou uma pessoa com aspiração na área de análise e de desenvolvimento de sistemas e com conhecimentos na área de desenvolvimento de jogos. Como eu gosto de está sempre aprendendo e desenvolvendo novas experiências aos meus usuários, isso trabalhando com minha equipe, eu me vejo como uma pessoa que aprecia estar envolvida em projetos criativos.</p>
+							<p>Eu passei no programa do <a href="http://www.portaldaeducacao.recife.pe.gov.br/content/o-embarque-digital" target="_blank">embarque digital</a>,uma parceria com a prefeitura do Recife e com o Porto digital, maior parque tecnológico do Brasil e um dos maiores do mundo. Por fim, sou dinâmico, de convivência tranquila e com iniciativa no trabalho. </p>
+							<span class="image main"><img src="assets/images/pic02.png" style="  border: 8px solid rgb(187, 152, 152);" alt="" /></span>
 						</div>
 					</section>
+
+				<!-- Section -->
+				<section id="second">
+					<header>
+						<h2>Busco resolver desafios e entregar projetos</h2>
+					</header>
+					<div class="content">
+						<p><strong>Como analista e desenvolvedor de sistemas</strong> eu busco aprender com as situações e procuro soluções para o nosso projeto tecnológico. Coopero e aprecio trabalhar em equipe, executando a minha função e oferencendo ajuda aos meus companheiros quando eles precisam. Minhhas características de Soft Skills me auxiliam a me adaptar à várias situações e aprender com elas; e dessa forma eu trago bastante valor para minha equipe. No desenvolvimento tecnológico eu destaco minhas principais linguagens: para o BACK-END eu uso PHP, que me auxilia no desenvolvimento Web e para o FRONT-END, utilizo HTML e CSS.</p>
+						<span class="image main"><img src="assets/images/pic02.png" style="  border: 8px solid rgb(187, 152, 152);" alt="" /></span>
+					</div>
+				</section>	
 
 				<!-- Section -->
 					<section>
@@ -80,10 +92,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -96,9 +108,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -111,9 +123,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+											<a href="assets/images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
