--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
 					<section id="first">
 						<header>
 							<h2>Perfil</h2>
+							<ul class="actions">
+								<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
+							</ul>
 						</header>
 						<div class="content">
 							<p> Saudações. Eu sou <b>Tiago César</b>! É um prazer poder me apresentar para você. <br> Eu sou uma pessoa com aspiração na área de análise e de desenvolvimento de sistemas e com conhecimentos na área de desenvolvimento de jogos. Como eu gosto de está sempre aprendendo e desenvolvendo novas experiências aos meus usuários, isso trabalhando com minha equipe, eu me vejo como uma pessoa que aprecia estar envolvida em projetos criativos.</p>
 							<p>Eu passei no programa do <a href="http://www.portaldaeducacao.recife.pe.gov.br/content/o-embarque-digital" target="_blank">embarque digital</a>,uma parceria com a prefeitura do Recife e com o Porto digital, maior parque tecnológico do Brasil e um dos maiores do mundo. Por fim, sou dinâmico, de convivência tranquila e com iniciativa no trabalho. </p>
-							<span class="image main"><img src="assets/images/pic02.png" style="  border: 8px solid rgb(187, 152, 152);" alt="" /></span>
+							<span class="image main photo"><img src="assets/images/pic02.jpg"  alt="Foto de perfil" /></span>
 						</div>
 					</section>
 
@@ -53,7 +56,7 @@
 					</header>
 					<div class="content">
 						<p><strong>Como analista e desenvolvedor de sistemas</strong> eu busco aprender com as situações e procuro soluções para o nosso projeto tecnológico. Coopero e aprecio trabalhar em equipe, executando a minha função e oferencendo ajuda aos meus companheiros quando eles precisam. Minhhas características de Soft Skills me auxiliam a me adaptar à várias situações e aprender com elas; e dessa forma eu trago bastante valor para minha equipe. No desenvolvimento tecnológico eu destaco minhas principais linguagens: para o BACK-END eu uso PHP, que me auxilia no desenvolvimento Web e para o FRONT-END, utilizo HTML e CSS.</p>
-						<span class="image main"><img src="assets/images/pic02.png" style="  border: 8px solid rgb(187, 152, 152);" alt="" /></span>
+						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
 					</div>
 				</section>	
 
@@ -75,6 +78,28 @@
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
 					</section>
+
+					<!--
+
+					<section>
+						<header>
+							<h2>Feugiat consequat tempus ultrices</h2>
+						</header>
+						<div class="content">
+							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<ul class="feature-icons">
+								<li class="icon solid fa-laptop">Consequat tempus</li>
+								<li class="icon solid fa-bolt">Etiam adipiscing</li>
+								<li class="icon solid fa-signal">Libero nullam</li>
+								<li class="icon solid fa-cog">Blandit condimentum</li>
+								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
+								<li class="icon solid fa-code">Nibh amet venenatis</li>
+							</ul>
+							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						</div>
+					</section>
+						
+					-->
 
 				<!-- Section -->
 					<section>
