--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Informática</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p>Segue abaixo as minhas principais linguagens de tecnologia:</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-play">Editores de texto, edição de vídeo, Planilha Excel, Internet e redes sociais e documentação</li>
+								<li class="icon solid fa-laptop">PHP para <b>BACK-END</b></li>
+								<li class="icon solid fa-code">HTML e CSS para o <b>FRONT-END</b> </li>
+								<li class="icon solid fa-database">SQL server e MySQL no <b>banco de dados</b></li>
+								<li class="icon solid fa-cog">Conhecimento em C, C#, python</li>
+								<li class="icon solid fa-gamepad">Conhecimento de Games engines: Clickteam fusion 2.5, Unity, Unreal, Construct e Game maker.</li>			
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
