parei na seção de experiencias

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				<section id="second">
 					<header>
 						<h2>Busco resolver desafios e entregar projetos</h2>
+						<ul class="actions">
+							<li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li>
+						</ul>
 					</header>
 					<div class="content">
 						<p><strong>Como analista e desenvolvedor de sistemas</strong> eu busco aprender com as situações e procuro soluções para o nosso projeto tecnológico. Coopero e aprecio trabalhar em equipe, executando a minha função e oferencendo ajuda aos meus companheiros quando eles precisam. Minhhas características de Soft Skills me auxiliam a me adaptar à várias situações e aprender com elas; e dessa forma eu trago bastante valor para minha equipe. No desenvolvimento tecnológico eu destaco minhas principais linguagens: para o BACK-END eu uso PHP, que me auxilia no desenvolvimento Web e para o FRONT-END, utilizo HTML e CSS.</p>
@@ -61,9 +64,12 @@
 				</section>	
 
 				<!-- Section -->
-					<section>
+					<section id="third">
 						<header>
 							<h2>Informática</h2>
+							<ul class="actions">
+								<li><a href="#fourth" class="arrow scrolly"><span class="label">Next</span></a></li>
+							</ul>
 						</header>
 						<div class="content">
 							<p>Segue abaixo as minhas principais linguagens de tecnologia:</p>
@@ -75,31 +81,24 @@
 								<li class="icon solid fa-cog">Conhecimento em C, C#, python</li>
 								<li class="icon solid fa-gamepad">Conhecimento de Games engines: Clickteam fusion 2.5, Unity, Unreal, Construct e Game maker.</li>			
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
 					</section>
 
-					<!--
+					<!-- Section -->
+				<section id="fourth">
+					<header>
+						<h2>Experiências</h2>
+						<ul class="actions">
+							<li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li>
+						</ul>
+					</header>
+					<div class="content">
+						<p> <b>Estágio de análise e desenvolvimento de sistemas - Senac PE. </b> <br> 2022- Dias atuais.</p>
+						<p> Enquanto eu estagiei no setor de desenvolvimento de tecnologia do SENAC, eu tive a experiência de aprender a modelar e fazer todas as etapas para a <b>criação de um sistema WEB</b>. Assim, eu documentei bastante os processos de criação e utilizei fluxograma para compreender um sistema. Na minha rotina, eu estava envolvido em: trabalhar na documentação; trabalhar como full-stack de um projeto (cuidando do FRONT-END, do BACK-END e do banco de dados); validar minhas atualizações com outros colegas de trabalho; pesquisar e coletar requisitos de um projeto. <br> Além disso, eu já passei 2 semanas trabalhando com o <b>atendimento ao cliente</b>, aonde eu: comunicava com os integrantes e com os usuários a respeito de suas dificuldades gerais; tirar dúvidas a respeito de um sistema já existente; utilizando o sistema do SENAC, eu cadastrava novos registros de usuários; ajudava os usuários com problemas de acesso à um sistema do SENAC; fazer relatórios. </p>
+						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
+					</div>
+				</section>
 
-					<section>
-						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
-						</header>
-						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
-							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-						</div>
-					</section>
-						
-					-->
 
 				<!-- Section -->
 					<section>
