seções principais feitas

--- a/index.html
+++ b/index.html
@@ -89,12 +89,41 @@
 					<header>
 						<h2>Experiências</h2>
 						<ul class="actions">
-							<li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li>
+							<li><a href="#fiveth" class="arrow scrolly"><span class="label">Next</span></a></li>
 						</ul>
 					</header>
 					<div class="content">
 						<p> <b>Estágio de análise e desenvolvimento de sistemas - Senac PE. </b> <br> 2022- Dias atuais.</p>
 						<p> Enquanto eu estagiei no setor de desenvolvimento de tecnologia do SENAC, eu tive a experiência de aprender a modelar e fazer todas as etapas para a <b>criação de um sistema WEB</b>. Assim, eu documentei bastante os processos de criação e utilizei fluxograma para compreender um sistema. Na minha rotina, eu estava envolvido em: trabalhar na documentação; trabalhar como full-stack de um projeto (cuidando do FRONT-END, do BACK-END e do banco de dados); validar minhas atualizações com outros colegas de trabalho; pesquisar e coletar requisitos de um projeto. <br> Além disso, eu já passei 2 semanas trabalhando com o <b>atendimento ao cliente</b>, aonde eu: comunicava com os integrantes e com os usuários a respeito de suas dificuldades gerais; tirar dúvidas a respeito de um sistema já existente; utilizando o sistema do SENAC, eu cadastrava novos registros de usuários; ajudava os usuários com problemas de acesso à um sistema do SENAC; fazer relatórios. </p>
+						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
+					</div>
+				</section>
+
+				<!-- Section -->
+				<section id="fiveth">
+					<header>
+						<h2>Formação Acadêmica</h2>
+						<ul class="actions">
+							<li><a href="#sixth" class="arrow scrolly"><span class="label">Next</span></a></li>
+						</ul>
+					</header>
+					<div class="content">
+						<p> <b>Faculdade SENAC – Programa Embarque digital Tecnólogo em Análise e Desenvolvimento de sistemas </b> <br>2021 – Dias atuais</p>
+						<p> <b>Universidade Federal Rural de Pernambuco Bacharelado em Sistemas da informação </b> <br>2021 – Dias atuais</p>
+						<p> <b>Escola Técnica Estadual Miguel Batista</b> <br>Técnico em Análise e Desenvolvimento de Sistemas em horário integral Fevereiro <br> 2016 a dezembro - 2019.</p>
+						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
+					</div>
+				</section>
+
+				<!-- Section -->
+				<section id="sixth">
+					<header>
+						<h2>Atividades extracurriculares</h2>
+					</header>
+					<div class="content">
+						<p> <b>PROGRAMA GANHA O MUNDO – Intercâmbio Canadá </b> <br> Intercâmbio Escolar: Holy Spirit High – Conception Bay South, Newfoundland <br> Período: fevereiro de 2019 á Julho de 2019 <br> Nível de inglês fluente </p>
+						<p> <b>IELTS(International English LanguageTesting System),Recife </b> <br> Pontuação Obtida: 6,0 de 9,0 <br> Período: Agosto 2019</p>
+						<p> <b>Bolsa de extensão em projeto tecológico através da Faculdade Senac e Facepe </b> <br> Período: Outubro |2021 até dezembro | 2021</p>
 						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
 					</div>
 				</section>
