seções principais feitas

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<div class="content">
 						<p> <b>Estágio de análise e desenvolvimento de sistemas - Senac PE. </b> <br> 2022- Dias atuais.</p>
 						<p> Enquanto eu estagiei no setor de desenvolvimento de tecnologia do SENAC, eu tive a experiência de aprender a modelar e fazer todas as etapas para a <b>criação de um sistema WEB</b>. Assim, eu documentei bastante os processos de criação e utilizei fluxograma para compreender um sistema. Na minha rotina, eu estava envolvido em: trabalhar na documentação; trabalhar como full-stack de um projeto (cuidando do FRONT-END, do BACK-END e do banco de dados); validar minhas atualizações com outros colegas de trabalho; pesquisar e coletar requisitos de um projeto. <br> Além disso, eu já passei 2 semanas trabalhando com o <b>atendimento ao cliente</b>, aonde eu: comunicava com os integrantes e com os usuários a respeito de suas dificuldades gerais; tirar dúvidas a respeito de um sistema já existente; utilizando o sistema do SENAC, eu cadastrava novos registros de usuários; ajudava os usuários com problemas de acesso à um sistema do SENAC; fazer relatórios. </p>
-						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
+						<span class="image main photo"><img src="assets/images/pic04.jpeg"  alt="Foto pessoal no desenvolvimento" /></span>
 					</div>
 				</section>
 
