Adicionei fotos nas sessões

--- a/index.html
+++ b/index.html
@@ -111,7 +111,12 @@
 						<p> <b>Faculdade SENAC – Programa Embarque digital Tecnólogo em Análise e Desenvolvimento de sistemas </b> <br>2021 – Dias atuais</p>
 						<p> <b>Universidade Federal Rural de Pernambuco Bacharelado em Sistemas da informação </b> <br>2021 – Dias atuais</p>
 						<p> <b>Escola Técnica Estadual Miguel Batista</b> <br>Técnico em Análise e Desenvolvimento de Sistemas em horário integral Fevereiro <br> 2016 a dezembro - 2019.</p>
-						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
+						<div class="gallery">
+							<a href="assets/images/pic05.jpg"><img src="assets/images/pic05.jpg" alt="" /></a>
+							<a href="assets/images/pic06.jpg"><img src="assets/images/pic06.jpg" alt="" /></a>
+							<a href="assets/images/pic09.jpg"  class="landscape"><img src="assets/images/pic09.jpg" alt="" /></a>
+							
+						</div>
 					</div>
 				</section>
 
@@ -124,7 +129,11 @@
 						<p> <b>PROGRAMA GANHA O MUNDO – Intercâmbio Canadá </b> <br> Intercâmbio Escolar: Holy Spirit High – Conception Bay South, Newfoundland <br> Período: fevereiro de 2019 á Julho de 2019 <br> Nível de inglês fluente </p>
 						<p> <b>IELTS(International English LanguageTesting System),Recife </b> <br> Pontuação Obtida: 6,0 de 9,0 <br> Período: Agosto 2019</p>
 						<p> <b>Bolsa de extensão em projeto tecológico através da Faculdade Senac e Facepe </b> <br> Período: Outubro |2021 até dezembro | 2021</p>
-						<span class="image main photo"><img src="assets/images/pic03.png"  alt="Foto pessoal no desenvolvimento" /></span>
+						<div class="gallery">
+							<a href="assets/images/pic07.jpg"><img src="assets/images/pic07.jpg" alt="" /></a>
+							<a href="assets/images/pic08.jpg"><img src="assets/images/pic08.jpg" alt="" /></a>
+							<a href="assets/images/pic10.jpg"  class="landscape"><img src="assets/images/pic10.jpg" alt="" /></a>
+						</div>
 					</div>
 				</section>
 
