--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 	<head>
 		<title>Currículo de Tiago Lopes</title>
 		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Curriculo digital de Tiago Lopes" />
+		<meta name="keywords" content="curriculo" />
+		<meta name="theme-color" content="#49fcd4" />
+    	<link rel="apple-touch-icon" href="/assets/icons/58.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<link rel="manifest" href="manifest.json">
 	</head>
 	<body class="is-preload">
 
@@ -200,6 +205,11 @@
 			</div>
 
 		<!-- Scripts -->
+			<script>
+				if ('serviceWorker' in navigator) {
+					navigator.serviceWorker.register('/sw.js', { scope: '/' });
+				}
+			</script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
