--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="assets/images/pic01.jpeg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="assets/images/pic01.jpeg" alt="Primeira imagem" /></span>
 						</div>
 					</section>
 
@@ -117,9 +117,9 @@
 						<p> <b>Universidade Federal Rural de Pernambuco Bacharelado em Sistemas da informação </b> <br>2021 – Dias atuais</p>
 						<p> <b>Escola Técnica Estadual Miguel Batista</b> <br>Técnico em Análise e Desenvolvimento de Sistemas em horário integral Fevereiro <br> 2016 a dezembro - 2019.</p>
 						<div class="gallery">
-							<a href="assets/images/pic05.jpg"><img src="assets/images/pic05.jpg" alt="" /></a>
-							<a href="assets/images/pic06.jpg"><img src="assets/images/pic06.jpg" alt="" /></a>
-							<a href="assets/images/pic09.jpg"  class="landscape"><img src="assets/images/pic09.jpg" alt="" /></a>
+							<a href="assets/images/pic05.jpg"><img src="assets/images/pic05.jpg" alt="Formação academica 01" /></a>
+							<a href="assets/images/pic06.jpg"><img src="assets/images/pic06.jpg" alt="Formação academica 02" /></a>
+							<a href="assets/images/pic09.jpg"  class="landscape"><img src="assets/images/pic09.jpg" alt="Formação academica 03" /></a>
 							
 						</div>
 					</div>
@@ -138,9 +138,9 @@
 						<p> <b>IELTS(International English LanguageTesting System),Recife </b> <br> Pontuação Obtida: 6,0 de 9,0 <br> Período: Agosto 2019</p>
 						<p> <b>Bolsa de extensão em projeto tecológico através da Faculdade Senac e Facepe </b> <br> Período: Outubro |2021 até dezembro | 2021</p>
 						<div class="gallery">
-							<a href="assets/images/pic07.jpg"><img src="assets/images/pic07.jpg" alt="" /></a>
-							<a href="assets/images/pic08.jpg"><img src="assets/images/pic08.jpg" alt="" /></a>
-							<a href="assets/images/pic10.jpg"  class="landscape"><img src="assets/images/pic10.jpg" alt="" /></a>
+							<a href="assets/images/pic07.jpg"><img src="assets/images/pic07.jpg" alt="Intercambio" /></a>
+							<a href="assets/images/pic08.jpg"><img src="assets/images/pic08.jpg" alt="Apresentação do projeto da faculdade Senac" /></a>
+							<a href="assets/images/pic10.jpg"  class="landscape"><img src="assets/images/pic10.jpg" alt="escola do intercambio" /></a>
 						</div>
 					</div>
 				</section>
