Criando sessão de projetos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="theme-color" content="#49fcd4" />
     	<link rel="apple-touch-icon" href="/assets/icons/58.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
-
+		<link rel="stylesheet" href="assets/css/youtube.css" />
 		<link rel="manifest" href="manifest.json">
 	</head>
 	<body class="is-preload">
@@ -102,6 +102,43 @@
 						<p> Enquanto eu estagiei no setor de desenvolvimento de tecnologia do SENAC, eu tive a experiência de aprender a modelar e fazer todas as etapas para a <b>criação de um sistema WEB</b>. Assim, eu documentei bastante os processos de criação e utilizei fluxograma para compreender um sistema. Na minha rotina, eu estava envolvido em: trabalhar na documentação; trabalhar como full-stack de um projeto (cuidando do FRONT-END, do BACK-END e do banco de dados); validar minhas atualizações com outros colegas de trabalho; pesquisar e coletar requisitos de um projeto. <br> Além disso, eu já passei 2 semanas trabalhando com o <b>atendimento ao cliente</b>, aonde eu: comunicava com os integrantes e com os usuários a respeito de suas dificuldades gerais; tirar dúvidas a respeito de um sistema já existente; utilizando o sistema do SENAC, eu cadastrava novos registros de usuários; ajudava os usuários com problemas de acesso à um sistema do SENAC; fazer relatórios. </p>
 						<span class="image main photo"><img src="assets/images/pic04.jpeg"  alt="Foto pessoal no desenvolvimento" /></span>
 					</div>
+				</section>
+
+				<!-- Section -->
+				<section id="fourth">
+					<header>
+						<h2>Projetos</h2>
+						<ul class="actions">
+							<li><a href="#fiveth" class="arrow scrolly"><span class="label">Next</span></a></li>
+						</ul>
+					</header>
+					<div class="content">
+						<p> <b>Sistema Termo de Compromisso</b> <br> SENAC, PE 2023.</p>
+						<p> Quando um colaborador entra no SENAC, ele é registrado no banco de dados do RH e um responsável do RH imprime um documento para solicitar a criação de conta de rede deste colaborador. O mesmo assina o termo para que a equipe de Suporte do Senac possa criar a conta deste colaborador. O problema é que dessa forma se gasta muita folha de papel e demora o processo, e por isso que o sistema nasceu para auxiliar nestas questões.
+							<br> O sistema de Termo de compromisso começa com a solicitação de um colaborador feita pelo RH, onde a mesma preenche os campos restantes de um formulário e o sistema envia automaticamente um e-mail para o colaborador. Ele recebe em seu e-mail e é redirecionado para uma tela e, após digitar o seu CPF correto ele pode ler e aceitar os termos de compromisso. Logo após isso, o sistema manda um e-mail para a equipe de Suporte do Senac. Por fim, um responsável do suporte entra no sistema, cria a conta de rede do colaborador a partir das informações recebidas e finaliza o processo, assim mandando e-mail com instruções para o colaborador.
+						</p>
+						
+						<div class="video-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/VEwOQ8PUWXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						</div>
+
+						<span class="image main photo"><img src="assets/images/pic11.png"  alt="E-mail enviado pelo sistema" /></span>
+						<div class="gallery">
+							<a href="assets/images/pic12.png"><img src="assets/images/pic12.png" alt="Login" /></a>
+							<a href="assets/images/pic14.png"><img src="assets/images/pic14.png" alt="E-mail enviado pelo sistema" /></a>
+							<a href="assets/images/pic13.png"  class="landscape"><img src="assets/images/pic13.png" alt="Tela de aceite do colaborador" /></a>
+						</div>
+
+						<br><p> <a href="https://tchau-camila.netlify.app/index.html" target="_blank"><b>Tchau, Camilla</b></a>  <br> SENAC, PE 2023.</p>
+						<p> Um site que desenvolvi como presente de despedida para uma colaboradora que trabalhou comigo durante o SENAC. O site contêm várias fotos de momentos que passamos juntos e a deseja tudo de bom na jornada de home office dela!
+						</p>
+						<div class="gallery">
+							<a href="assets/images/pic15.png"><img src="assets/images/pic15.png" alt="Site tchau Camilla" /></a>
+							<a href="assets/images/pic16.png"><img src="assets/images/pic16.png" alt="Tela de despedida" /></a>
+						</div>
+
+					</div>
+
 				</section>
 
 				<!-- Section -->
