Atualização de sessão projetos e de dados concluída

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<header>
 							<h1>Tiago Lopes</h1>
 							<p>Analista e desenvolvedor de sistemas. <br>
-								<a> FRONT-END || BACK-END</a> <br>
+								<a> BACK-END || FRONT-END </a> <br>
 								<a href="https://www.instagram.com/tiago_lopes.exe/" target="_blank">@tiago_lope.exe </a> / <a href="https://github.com/TiagoUniverse" target="_blank">GitHub</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -105,11 +105,11 @@
 				</section>
 
 				<!-- Section -->
-				<section id="fourth">
+				<section id="fiveth">
 					<header>
 						<h2>Projetos</h2>
 						<ul class="actions">
-							<li><a href="#fiveth" class="arrow scrolly"><span class="label">Next</span></a></li>
+							<li><a href="#sixth" class="arrow scrolly"><span class="label">Next</span></a></li>
 						</ul>
 					</header>
 					<div class="content">
@@ -137,16 +137,17 @@
 							<a href="assets/images/pic16.png"><img src="assets/images/pic16.png" alt="Tela de despedida" /></a>
 						</div>
 
+						<br><br><a href="https://github.com/TiagoUniverse" target="_blank"><h3> <u> Mais projetos no GitHub na sessão "Blog posts and websites"</u></h3></a>
 					</div>
 
 				</section>
 
 				<!-- Section -->
-				<section id="fiveth">
+				<section id="sixth">
 					<header>
 						<h2>Formação Acadêmica</h2>
 						<ul class="actions">
-							<li><a href="#sixth" class="arrow scrolly"><span class="label">Next</span></a></li>
+							<li><a href="#seventh" class="arrow scrolly"><span class="label">Next</span></a></li>
 						</ul>
 					</header>
 					<div class="content">
@@ -163,11 +164,11 @@
 				</section>
 
 				<!-- Section -->
-				<section id="sixth">
+				<section id="seventh">
 					<header>
 						<h2>Atividades extracurriculares</h2>
 						<ul class="actions">
-							<li><a href="#seventh" class="arrow scrolly"><span class="label">Next</span></a></li>
+							<li><a href="#eighth" class="arrow scrolly"><span class="label">Next</span></a></li>
 						</ul>
 					</header>
 					<div class="content">
@@ -184,7 +185,7 @@
 
 				
 				<!-- Section -->
-					<section id="seventh">
+					<section id="eighth">
 						<header>
 							<h2>Entre em contato</h2>
 						</header>
@@ -215,7 +216,7 @@
 								</li>
 								<li>
 									<h3>Telefone</h3>
-									<a>(81) 98682-3268</a>
+									<a>(81) 99631-4628</a>
 								</li>
 								<li>
 									<h3>Endereço</h3>
