Adicionei o PET na sessão de projetos

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
 							<a href="assets/images/pic16.png"><img src="assets/images/pic16.png" alt="Tela de despedida" /></a>
 						</div>
 
+						<br><p> <a href="https://docs.google.com/document/d/1nSC9oOq2EXB0j8YWG0x8u9Ec_mfw1s1R/edit?usp=sharing&ouid=103912097688888043988&rtpof=true&sd=true" target="_blank"><b>Projeto de extensão (PET) : Data Science</b></a>  <br> SENAC, PE 2021.</p>
+						<p> Participei de um projeto de extensão oferecido pela faculdade SENAC e entrei no grupo focado em utilizar o Data Science para potencialização de vendas de pescados e afins. Assim nós visitamos a empresa Tudo do mar e ela nos ofereceu os requisitos de seu problema e os seus dados para que pudéssemos fazer a limpeza dos dados e gerar conhecimento. No fim, a empresa nos parabenizou pelo trabalho feito.
+						</p>
+						<div class="gallery">
+							<a href="assets/images/PET- visita 1.jpg"><img src="assets/images/PET- visita 1.jpg" alt="Dia de visita ao Tudo do Mar Pescados" /></a>
+							<a href="assets/images/PET- visita 2.jpg"><img src="assets/images/PET- visita 2.jpg" alt="Segunda foto com a Tudo do Mar Pescados	" /></a>
+						</div>
+
 						<br><br><a href="https://github.com/TiagoUniverse" target="_blank"><h3> <u> Mais projetos no GitHub na sessão "Blog posts and websites"</u></h3></a>
 					</div>
 
