Add project Sistema controle monetario

--- a/index.html
+++ b/index.html
@@ -129,6 +129,29 @@
 							<a href="assets/images/pic13.png"  class="landscape"><img src="assets/images/pic13.png" alt="Tela de aceite do colaborador" /></a>
 						</div>
 
+						<br>
+						<p>  <a href="https://controle-monetario.epizy.com" target="_blank"><b>Sistema Controle Financeiro</b> </a> <br> SENAC, PE Março de 2023.</p>
+
+						<p>Link: <a href="https://controle-monetario.epizy.com" target="_blank"> Controle Monetário </a></p>
+
+						<p> 
+							Eu desenvolvi este sistema individualmente como proposta de me desafiar os meus conhecimentos e desenvolver o meu próprio sistema. Neste cenário, decidi criar um sistema para ajudar com registros de gastos e de dinheiro que recebo de entrada. O foco do sistema foi no BACK-END e em exercitar o código funcional. 
+							Dessa forma, O sistema Controle monetário tem o foco em ajudar o usuário a registrar sua poupança e suas quinzenas de acordo com o ano. Ele permite você registrar o dinheiro que entrou e o dinheiro que saiu no mes selecionado.
+							<br> O sistema está hospedado no servidor e pode ser acessado em qualquer lugar. Ele também possui o seu certificado SSL para que seja reconhecido como seguro pelo Google Chrome.
+						</p>
+						
+						<div class="video-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/Mu5sMqGurAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						</div>
+
+						<span class="image main photo"><img src="assets/images/pic17.png"  alt="Tela inicial do sistema" /></span>
+						<div class="gallery">
+							<a href="assets/images/pic18.png"><img src="assets/images/pic18.png" alt="poupança" /></a>
+							<a href="assets/images/pic20.png"><img src="assets/images/pic20.png" alt="Tela de login" /></a>
+							<a href="assets/images/pic19.png"  class="landscape"><img src="assets/images/pic19.png" alt="Registro de entradas e saídas" /></a>
+						</div>
+
+
 						<br><p> <a href="https://tchau-camila.netlify.app/index.html" target="_blank"><b>Tchau, Camilla</b></a>  <br> SENAC, PE 2023.</p>
 						<p> Um site que desenvolvi como presente de despedida para uma colaboradora que trabalhou comigo durante o SENAC. O site contêm várias fotos de momentos que passamos juntos e a deseja tudo de bom na jornada de home office dela!
 						</p>
